changed the way header width was declared and instead adding padding-right to nav bar to adjust spacing issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,7 +22,7 @@ h2 {
     color: #124559;
     font-family: Outfit;
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     margin-bottom: 1rem;
 }
 
@@ -50,6 +50,7 @@ p {
     font-family: Manrope;
     color: #1B263B;
     line-height: 2rem;
+    font-size: 1.04rem;
 }
 
 .landing {
@@ -62,7 +63,7 @@ p {
 }
 
 header {
-    width: 90%;
+    width: 100%;
     height: 5rem;
     display: flex;
     flex-direction: row;
@@ -72,7 +73,8 @@ header {
 }
 
 .logo {
-    margin-top: 1rem;
+    margin-top: 2rem;
+    padding-left: 1rem;
     img{
         height: 5rem;
         width: auto;
@@ -80,7 +82,8 @@ header {
 }
 
 .desktop ul {
-    margin-top: 0.4rem;
+    margin-top: 1rem;
+    padding-right: 4rem;
     width: 100%;
     list-style: none;
     display: flex;
@@ -320,7 +323,7 @@ section {
     text-align: center;
     white-space: nowrap; 
     padding: 0.5rem 1rem; 
-    margin-top: 5rem; 
+    margin-top: 3rem; 
 }
 
 .projects .btn:hover {
@@ -339,7 +342,7 @@ section {
 }
 
 .members-info {
-    width: 15%;
+    width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
